# windevexpert

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
doc/: api.md  architecture-frontend-redesign.md  frontend.md  prd-frontend-redesign.md
doc/design/: catalogue.html  cours.html  dashboard_client.html  frontend.html  signin_signup.html
frontend/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/home/: HeroSection.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/ui/: RevealOnScroll.tsx  SectionBadge.tsx  button.tsx  progress.tsx  slider.tsx  toaster.tsx
frontend/src/features/auth/: api.ts  types.ts
frontend/src/hooks/: useScrollReveal.ts  useTheme.ts
frontend/src/layouts/: AppLayout.tsx  PlayerLayout.tsx  PrivateLayout.tsx  PublicLayout.tsx  index.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Auth.tsx  Catalog.tsx  ClientDashboard.tsx  CourseDetail.tsx  Dashboard.tsx  Home.tsx  Login.tsx  PaymentCancel.tsx  PaymentSuccess.tsx  Player.tsx  Profile.tsx  Register.tsx
frontend/src/providers/: QueryProvider.tsx  ThemeProvider.tsx
frontend/src/stores/: auth.ts  theme.ts
frontend/src/styles/: animations.css
migrations/: 0001_init.sql  0002_enrollments.sql
src/: main.rs
src/api/: auth.rs  courses.rs  health.rs  mod.rs  profile.rs  stripe.rs
src/repository/: db.rs
src/service/: email_service.rs  mod.rs  video_service.rs
src/utils/: config.rs  error.rs  jwt.rs  mod.rs
(+14 files in other folders)
