[package]
name = "windevexpert"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "json"] }
argon2 = "0.5"
jsonwebtoken = { version = "9", features = ["use_pem"] }
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
governor = "0.6"
hyper = { version = "1", features = ["full"] }
http = "1"
sha2 = "0.10"
urlencoding = "2"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
hmac = "0.12"
hex = "0.4"

[build-dependencies]

